# GPU-HeiPa

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  build.sh  fast_build.sh  main.cpp  out.txt
app/: GPU-HeiPa-k2.cpp  GPU-HeiPa-memetic.cpp  GPU-HeiPa-memeticShrinking.cpp  GPU-HeiPa.cpp  GPU-HeiProMap.cpp
src/coarsening/: two_hop_matching.h
src/datastructures/: block_connectivity.h  graph.h  host_graph.h  kokkos_memory_stack.h  mapping.h  memeticSolver.h  memeticSolverShrinking.h  partition.h  promap_solver.h  solver.h  solverRecursiveBisection.h  solverRecursiveBisectionDevice.h  solverRecursiveBisectionGPU.h  solverRecursiveBisectionGPUGood.h  solverRecursiveBisectionGood.h  solverRecursiveBisectionHost.h
src/distance_oracles/: distance_oracle_binary.h  distance_oracle_division.h  distance_oracle_division_store.h  distance_oracle_helpers.h  distance_oracle_matrix.h
src/initial_partitioning/: global_multisection.h  hierarchical_multisection.h  kaffpa_initial_partitioning.h  kaffpa_partitioning.h  metis_initial_partitioning.h  metis_partitioning.h  recursive_bisection_2way_partitioner.h  recursive_bisection_kway_partitioner.h
src/initial_partitioning/kway_partitioner/: LICENSE  kway_block_conn.h  kway_boundary.h  kway_core.h  kway_graph.h  kway_indexed_prio_queue.h  kway_prio_queue.h  kway_utility.h
src/refinement/: block_conn.h  block_conn_k2.h  jet_label_propagation.h  jet_label_propagation_k2.h  jet_label_propagation_list.h  memetic_refinement.h  memetic_refinementShrinking.h  promap_jet_label_propagation.h
src/utility/: JSON_util.h  asserts.h  comm_cost.h  configuration.h  custom_reductions.h  definitions.h  edge_cut.h  hungarian_algorithm.h  kokkos_util.h  macros.h  memetic_configuration.h  memetic_helper.h  profiler.h  promap_configuration.h  random_engine.h  util.h
